--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,305 +1,246 @@
-/*@media(min-width:1025px){
-.ftr-contact a{pointer-events:none;}
-}*/
-
-@media (min-width:1200px) and (max-width:1700px){
-.account-r.has-player{width:50%;}
+@media (min-width:1200px) and (max-width:1700px){.account-r.has-player{width:50%;}
 }
-
-@media(max-width:1499px){
-.bx-wrapper img {max-width:100%;min-width:1199px;}
-.hero-caption h2 {margin:0 0 10px;padding:0;font-size:34px;letter-spacing:0.03em;line-height:44px;}
+@media(max-width:1499px){.bx-wrapper img{max-width:100%;min-width:1199px;}
+.hero-caption h2{margin:0 0 10px;padding:0;font-size:34px;letter-spacing:0.03em;line-height:44px;}
 .hero-caption p{margin:0 0 25px;}
-.hero-caption a {widtH:140px;padding:10px;}
-.header {margin: 30px 0 0;}
-.hero-section {margin:-110px 0 0;}
+.hero-caption a{widtH:140px;padding:10px;}
+.header{margin:30px 0 0;}
+.hero-section{margin:-110px 0 0;}
 }
-
-@media(min-width:1440px){
-.video-box-add,.ad-video-h .video-box-add{width:300px;}
+@media(min-width:1440px){.video-box-add,.ad-video-h .video-box-add{width:300px;}
 }
-
-@media (min-width:1200px) and (max-width:1499px){
-.user-list-l,
-.nbmatches .user-list-l {width:48%;}
-.user-list-r {width: 46%;}
+@media (min-width:1200px) and (max-width:1499px){.user-list-l,
+.nbmatches .user-list-l{width:48%;}
+.user-list-r{width:46%;}
 }
-
-@media(min-width:1300px){
-.video-box-add{width:250px;}
+@media(min-width:1300px){.video-box-add{width:250px;}
 .ad-video-h .video-box-add{width:240px;}
 }
-
-@media (min-width:1200px) and (max-width:1279px){
-.benefits-content p br{display:none;}
+@media (min-width:1200px) and (max-width:1279px){.benefits-content p br{display:none;}
 #hpplayer{width:600px !important;}
 }
-
-@media(max-width:1199px){
-.home-welcome p br,
+@media(max-width:1199px){.home-welcome p br,
 .benefits-content p br{display:none;}
 .home-welcome{padding:50px 0;}
 .home-package .container{width:100%;}
 .package-table{overflow-x:auto;}
 .home-package .package-table table{width:100%;min-width:1140px;}
 }
-
-@media(min-width:1025px) and (max-width:1199px){
-.account-r.has-player{width:46%;}
+@media(min-width:1025px) and (max-width:1199px){.account-r.has-player{width:46%;}
 .footer-column:nth-child(1){width:21%;}
 .footer-column:nth-child(2){width:24%;}
 .footer-column:nth-child(3){width:34%;}
 .footer-column:nth-child(4){width:21%;}
-.package-table table th h3 {padding:21px 6px;}
+.package-table table th h3{padding:21px 6px;}
 .package-table table thead th{letter-spacing:0;}
-.hero-caption {max-width:970px;}
-.my-account::after {left:308px;}
-.left-my-picture ul li {padding:0 7px 20px;}
-.preferences-ul li {width:44%;margin:0 5% 30px 0;}
-#hpplayer {width: 500px !important;}
+.hero-caption{max-width:970px;}
+.my-account::after{left:308px;}
+.left-my-picture ul li{padding:0 7px 20px;}
+.preferences-ul li{width:44%;margin:0 5% 30px 0;}
+#hpplayer{width:500px !important;}
 }
-
-@media(min-width:1300px) and (max-width:1499px){
-.user-list-l-l,
-.nbmatches .user-list-l-l {min-height:420px;}
+@media(min-width:1300px) and (max-width:1499px){.user-list-l-l,
+.nbmatches .user-list-l-l{min-height:420px;}
 .user-list-l,
-.nbmatches .user-list-l {height:auto;max-width: 420px;min-height: 420px;}
+.nbmatches .user-list-l{height:auto;max-width:420px;min-height:420px;}
 .user-list-pic-wrapper,
 .nbmatches .user-list-pic-wrapper{width:420px;}
 .user-list-pic{width:420px;height:420px;}
-.user-list-pic-bg, 
-.nbmatches .user-list-pic-bg {width:420px;height:420px;}
+.user-list-pic-bg,
+.nbmatches .user-list-pic-bg{width:420px;height:420px;}
 .user-likes a,
-.nbmatches .user-likes a {margin: 0 5px;}
-.user-list-r {float: left;padding: 40px 0 0 50px;  width: 46%;}
-.user-list-r h2 big { word-break: break-all;}
-.bg-name {font-size:160px;}
+.nbmatches .user-likes a{margin:0 5px;}
+.user-list-r{float:left;padding:40px 0 0 50px;width:46%;}
+.user-list-r h2 big{word-break:break-all;}
+.bg-name{font-size:160px;}
 }
-
-@media(min-width:1100px) and (max-width:1299px){
-.user-list-l-l,
-.nbmatches .user-list-l-l {min-height: 380px;}
+@media(min-width:1100px) and (max-width:1299px){.user-list-l-l,
+.nbmatches .user-list-l-l{min-height:380px;}
 .user-list-l,
-.nbmatches .user-list-l {height:auto;max-width: 380px;min-height: 380px;}
+.nbmatches .user-list-l{height:auto;max-width:380px;min-height:380px;}
 .user-list-pic-wrapper,
 .nbmatches .user-list-pic-wrapper{width:380px;}
 .user-list-pic{width:380px;height:380px;}
 .user-list-pic-bg,
-.nbmatches .user-list-pic-bg {width:380px;height:380px;}
+.nbmatches .user-list-pic-bg{width:380px;height:380px;}
 .user-likes a,
-.nbmatches .user-likes a {margin: 0 5px;}
-.user-list-r {float: left;padding: 40px 0 0 50px;  width: 46%;}
-.user-list-r h2 big { word-break: break-all;}
-.bg-name {font-size:160px;}
+.nbmatches .user-likes a{margin:0 5px;}
+.user-list-r{float:left;padding:40px 0 0 50px;width:46%;}
+.user-list-r h2 big{word-break:break-all;}
+.bg-name{font-size:160px;}
 .content-div{width:70% !important;}
 .ad-div{width:15% !important;}
 }
-
-@media(min-width:1025px) and (max-width:1099px){
-.user-list-l-l,
-.nbmatches .user-list-l-l {min-height: 280px;}
+@media(min-width:1025px) and (max-width:1099px){.user-list-l-l,
+.nbmatches .user-list-l-l{min-height:280px;}
 .user-list-l,
-.nbmatches .user-list-l {height: 280px;max-width: 280px;min-height: 280px;}
+.nbmatches .user-list-l{height:280px;max-width:280px;min-height:280px;}
 .user-list-pic-wrapper,
 .nbmatches .user-list-pic-wrapper{width:280px;}
 .user-list-pic{width:280px;height:280px;}
 .user-list-pic-bg,
-.nbmatches .user-list-pic-bg {width:280px;height:280px;}
+.nbmatches .user-list-pic-bg{width:280px;height:280px;}
 .user-likes a,
-.nbmatches .user-likes a {margin: 0 5px;}
-.user-list-r {float: right;max-width: 360px;padding:40px 0 0;}
-.user-list-r h2 big { word-break: break-all;}
-.bg-name {font-size:160px;}
+.nbmatches .user-likes a{margin:0 5px;}
+.user-list-r{float:right;max-width:360px;padding:40px 0 0;}
+.user-list-r h2 big{word-break:break-all;}
+.bg-name{font-size:160px;}
 .content-div{width:70% !important;}
 .ad-div{width:15% !important;}
 .luvrcloud-btn,
 .drluvr-btn{top:-40px;}
 }
-
-@media(min-width:1025px){
-.account-r.has-player{min-height:760px;}
+@media(min-width:1025px){.account-r.has-player{min-height:760px;}
 }
-@media(max-width:1024px){
-.footer-column:nth-child(1){width:18%;}
+@media(max-width:1024px){.footer-column:nth-child(1){width:18%;}
 .footer-column:nth-child(2){width:25%;}
 .footer-column:nth-child(3){width:35%;}
 .footer-column:nth-child(4){width:22%;}
-.preferences-ul li {width:100%;margin:0 0 30px;}
+.preferences-ul li{width:100%;margin:0 0 30px;}
 .user-list-l,
-.nbmatches .user-list-l {float: none;margin:0 auto 35px; max-width: 400px;}
-.user-list-r {float:none;max-width:480px;padding:40px 0 0;width: 100%;}
+.nbmatches .user-list-l{float:none;margin:0 auto 35px;max-width:400px;}
+.user-list-r{float:none;max-width:480px;padding:40px 0 0;width:100%;}
 .user-likes a,
-.nbmatches .user-likes a {margin: 0 10px;}
-.user-list-r h2 big { word-break: break-all;}
+.nbmatches .user-likes a{margin:0 10px;}
+.user-list-r h2 big{word-break:break-all;}
 .ad-video{left:0;position:relative;top:0;-webkit-transform:translateY(0);-moz-transform:translateY(0);transform:translateY(0);}
 .video-box-add,
 .ad-video-h .video-box-add{background:#eee;display:inline-block;margin:0 20px 20px 0;width:42%;}
 }
-
-@media(min-width:992px) and (max-width:1024px){
-.hero-caption {max-width:970px;}
-.my-account::after {left:308px;}
-.left-my-picture ul li {padding:0 7px 20px;}
-ul.my-picture-ul > li {padding:10px;}
+@media(min-width:992px) and (max-width:1024px){.hero-caption{max-width:970px;}
+.my-account::after{left:308px;}
+.left-my-picture ul li{padding:0 7px 20px;}
+ul.my-picture-ul > li{padding:10px;}
 #hpplayer{right:20px;width:420px !important;}
-#hpplayer {width:500px !important;}
-.hero-caption h2 {font-size:30px;}
+#hpplayer{width:500px !important;}
+.hero-caption h2{font-size:30px;}
 .dating-box ul.my-picture-ul > li{width:33.33%;}
 .luvrcloud-btn,
 .drluvr-btn{top:-30px;}
 }
-
-@media(min-width:768px) and (max-width:991px){
-.hero-caption {max-width:738px;}
+@media(min-width:768px) and (max-width:991px){.hero-caption{max-width:738px;}
 .benefits-content h2 span{display:block;}
-.home-package {padding:30px 0;}
-.ftr-newsletter form {max-width:200px;}
-.follow-luvr > a {margin:0 6px;}
-.footer-column h3 {margin:0 0 20px;font-size:14px;}
+.home-package{padding:30px 0;}
+.ftr-newsletter form{max-width:200px;}
+.follow-luvr > a{margin:0 6px;}
+.footer-column h3{margin:0 0 20px;font-size:14px;}
 .follow-luvr > a svg{width:20px;}
 .footer-ul li a{font-size:13px;}
-.footer-column {min-height: 160px;padding:20px 0 15px;}
-.footer-top {padding:30px 0;}
+.footer-column{min-height:160px;padding:20px 0 15px;}
+.footer-top{padding:30px 0;}
 .benefits-content p{font-size:13px;line-height:18px;}
-.benefits-content {padding:25px 10p;}
+.benefits-content{padding:25px 10p;}
 .benefits-content h2{line-height:20px;}
-.home-welcome p {font-size:14px;line-height:22px;}
-.home-welcome h2 {margin: 0 0 30px;}
-.home-welcome {padding:40px 0;}
-.my-account::after {left:235px;}
+.home-welcome p{font-size:14px;line-height:22px;}
+.home-welcome h2{margin:0 0 30px;}
+.home-welcome{padding:40px 0;}
+.my-account::after{left:235px;}
 .account-l-link ul li a{padding:12px 10px 12px 20px;}
-.account-l-link ul li a::after {left:2px;}
-.left-my-picture ul li {padding:0 5px 20px;}
-ul.my-picture-ul > li {padding:7px;}
-#frm_powerluvs .color-btn {min-width: inherit;white-space: nowrap;width:45px;overflow:hidden;}
+.account-l-link ul li a::after{left:2px;}
+.left-my-picture ul li{padding:0 5px 20px;}
+ul.my-picture-ul > li{padding:7px;}
+#frm_powerluvs .color-btn{min-width:inherit;white-space:nowrap;width:45px;overflow:hidden;}
 #hpplayer{width:420px !important;}
-.hero-caption p {width:40%;font-size:14px;}
+.hero-caption p{width:40%;font-size:14px;}
 .hero-caption p br{display:none;}
-.hero-caption h2 {font-size:30px;}
+.hero-caption h2{font-size:30px;}
 .dating-box ul.my-picture-ul > li{width:33.33%;}
 .luvrcloud-btn,
 .drluvr-btn{top:-20px;}
 }
-
-@media(max-width:767px){
-.logo{padding:12px 0 0;}
-.user-dropdown > a {margin: 0;}
+@media(max-width:767px){.logo{padding:12px 0 0;}
+.user-dropdown > a{margin:0;}
 .logo a img{height:34px;}
 .login-instagram{padding:0;}
-.header {margin:15px 0 0;padding:10px 15px;}
+.header{margin:15px 0 0;padding:10px 15px;}
 .withoutlogin .header-r a span{display:none;}
-.withoutlogin .header-r {padding:0;}
-.withoutlogin .logo {padding: 0;}
-.withoutlogin .header {padding: 20px 15px 15px;}
-.social-connect > div {margin:0 0 15px;}
-.social-connect {padding: 0;text-align: center;}
-.table-responsive > .usr-list.table {min-width: 450px;}
-.table-wrapper.content-list .table {min-width: 450px;}
-.table-wrapper.content-list {overflow:auto;margin:0 0 20px; }
-.bx-wrapper img {max-width:940px;left:50%;position:relative;transform:translateX(-50%);min-width: inherit;}
-.hero-caption a {width:130px;padding:7px;line-height:14px;margin:0;}
+.withoutlogin .header-r{padding:0;}
+.withoutlogin .logo{padding:0;}
+.withoutlogin .header{padding:20px 15px 15px;}
+.social-connect > div{margin:0 0 15px;}
+.social-connect{padding:0;text-align:center;}
+.table-responsive > .usr-list.table{min-width:450px;}
+.table-wrapper.content-list .table{min-width:450px;}
+.table-wrapper.content-list{overflow:auto;margin:0 0 20px;}
+.bx-wrapper img{max-width:940px;left:50%;position:relative;transform:translateX(-50%);min-width:inherit;}
+.hero-caption a{width:130px;padding:7px;line-height:14px;margin:0;}
 .bx-controls.bx-has-pager.bx-has-controls-direction{display:none;}
-.luvr-benefits-ul li {width:100%;float:none;}
-.hero-caption h2 {font-size: 20px;letter-spacing: 0;line-height: 24px;}
+.luvr-benefits-ul li{width:100%;float:none;}
+.hero-caption h2{font-size:20px;letter-spacing:0;line-height:24px;}
 .hero-caption h2 br{display:none;}
-.hero-caption p {margin:0 0 15px;line-height:normal;padding:0;letter-spacing: 0.02em;}
+.hero-caption p{margin:0 0 15px;line-height:normal;padding:0;letter-spacing:0.02em;}
 .hero-caption p br{display:none;}
-.hero-caption {max-width:initial;left:6%;transform:translate(0,-50%);text-align:left;margin:60px 0 0 0;width:92%;}
-.home-welcome h2 {margin: 0 0 20px;padding: 0 0 10px;font-size: 100%;line-height: 100%;position: relative;display: inline-block;vertical-align: top;}
-.home-welcome h2 big {font-size:26px;}
-.home-welcome p {font-size:14px;line-height:24px;}
-.home-welcome {padding:30px 0;}
-.benefits-content {padding:20px 15px;}
-.home-package {padding:25px 0;}
-.footer-top {padding:25px 0;}
-.footer-top .footer-column {width:100%;float:none;min-height:initial;padding:0 0 35px;}
+.hero-caption{max-width:initial;left:6%;transform:translate(0,-50%);text-align:left;margin:60px 0 0 0;width:92%;}
+.home-welcome h2{margin:0 0 20px;padding:0 0 10px;font-size:100%;line-height:100%;position:relative;display:inline-block;vertical-align:top;}
+.home-welcome h2 big{font-size:26px;}
+.home-welcome p{font-size:14px;line-height:24px;}
+.home-welcome{padding:30px 0;}
+.benefits-content{padding:20px 15px;}
+.home-package{padding:25px 0;}
+.footer-top{padding:25px 0;}
+.footer-top .footer-column{width:100%;float:none;min-height:initial;padding:0 0 35px;}
 .footer-top .footer-column:last-child{padding-bottom:0;}
-.footer-column::after, 
-.footer-column::before {display:none;}
-.footer-column h3 {margin:0 0 15px;}
-.footer-ul li {display:block;padding:0 0 5px;margin:0;}
+.footer-column::after,
+.footer-column::before{display:none;}
+.footer-column h3{margin:0 0 15px;}
+.footer-ul li{display:block;padding:0 0 5px;margin:0;}
 .footer-bottom p{text-align:center;padding-bottom:10px;}
-.policy-link {float:none;text-align:center;}
+.policy-link{float:none;text-align:center;}
 .policy-link a{margin:0 10px;}
-.with-login #header {padding:15px 0 10px;}
-.with-login .user-dropdown > a {position:relative;padding:10px 0 0 72px;min-height:60px;display:block;text-decoration:none !important;margin:0;}
-.with-login .down-caret {bottom:6px;right:3px;}
-.with-login .logo { padding:13px 0 0;}
-.with-login .header {margin:0 0 10px;padding:15px;}
-.account-l-head::before {display:none;}
+.with-login #header{padding:15px 0 10px;}
+.with-login .user-dropdown > a{position:relative;padding:10px 0 0 72px;min-height:60px;display:block;text-decoration:none !important;margin:0;}
+.with-login .down-caret{bottom:6px;right:3px;}
+.with-login .logo{padding:13px 0 0;}
+.with-login .header{margin:0 0 10px;padding:15px;}
+.account-l-head::before{display:none;}
 .account-r-head::before,
 .my-account::before,
 .my-account::after{display:none;}
 .account-r-head,
 .account-l-head{border:1px solid #f5f5f5;padding:15px;background:#fff;margin:15px auto;height:auto;}
-.account-l-btm {padding:10px 10px 0;}
+.account-l-btm{padding:10px 10px 0;}
 .account-r-head a{margin-top:4px;}
-.account-r-body {padding:0 2px;}
-ul.my-picture-ul > li {width:50%;}
-.user-list-r {float: none;padding:0; width:85%;margin:0 auto; }
-.user-list-r h2 big { word-break: break-all;}
-.bg-name {font-size:160px;}
-.user-list-r h2 {margin:0 0 15px;}
+.account-r-body{padding:0 2px;}
+ul.my-picture-ul > li{width:50%;}
+.user-list-r{float:none;padding:0;width:85%;margin:0 auto;}
+.user-list-r h2 big{word-break:break-all;}
+.bg-name{font-size:160px;}
+.user-list-r h2{margin:0 0 15px;}
 #hpplayer{position:relative;right:0;width:100% !important;}
 .back-btn-div{top:20px;}
 .dating-box ul.my-picture-ul > li{width:50%;}
-.luvrcloud-btn{position: initial;display:inline-block;width:50%;margin:0 5px 20px;top:0;width:150px;}
-.luvrcloud-btn img {height: 76px;}
-.drluvr-btn{position: initial;display:inline-block;width: 144px;min-width: inherit;margin:0 5px 20px;top:0;}
+.luvrcloud-btn{position:initial;display:inline-block;width:50%;margin:0 5px 20px;top:0;width:150px;}
+.luvrcloud-btn img{height:76px;}
+.drluvr-btn{position:initial;display:inline-block;width:144px;min-width:inherit;margin:0 5px 20px;top:0;}
 .center-content{margin:15px 0;}
-.intesested-in {width:90%;padding:50px 30px;box-shadow:0 0 10px 0 rgba(0,0,0,.1);}
+.intesested-in{width:90%;padding:50px 30px;box-shadow:0 0 10px 0 rgba(0,0,0,.1);}
 }
-
-
-@media(max-width:460px){
-ul.my-picture-ul > li {width:100%;}
+@media(max-width:460px){ul.my-picture-ul > li{width:100%;}
 .user-list-l-l,
-.nbmatches .user-list-l-l {min-height:280px;}
+.nbmatches .user-list-l-l{min-height:280px;}
 .user-list-l,
-.nbmatches .user-list-l {max-width:280px;min-height:370px;}
+.nbmatches .user-list-l{max-width:280px;min-height:370px;}
 .user-list-pic-wrapper,
 .nbmatches .user-list-pic-wrapper{width:280px;}
 .user-list-pic{width:280px;height:280px;}
-.user-list-pic-bg, 
-.nbmatches .user-list-pic-bg {width:280px;height:280px;}
+.user-list-pic-bg,
+.nbmatches .user-list-pic-bg{width:280px;height:280px;}
 .user-likes a,
-.nbmatches .user-likes a {margin: 0 5px;}
+.nbmatches .user-likes a{margin:0 5px;}
 .video-box-add,.ad-video-h .video-box-add{margin:0 0 20px;width:100%;}
-.dating-box ul.my-picture-ul > li{width:100%;max-width:262px;margin:0 auto 15px;float:none; }
-.drluvr-btn{width: 70%;}
+.dating-box ul.my-picture-ul > li{width:100%;max-width:262px;margin:0 auto 15px;float:none;}
+.drluvr-btn{width:70%;}
 }
-
-/*19-04-2017*/
-.benefits-content {
-    min-height: 200px;
+.benefits-content{min-height:200px;}
+@media(max-width:1560px){.benefits-content{min-height:240px;}
 }
-@media(max-width:1560px){
-    .benefits-content {
-        min-height: 240px;
-    }
+@media(max-width:1550px){.benefits-content{min-height:260px;}
 }
-@media(max-width:1550px){
-    .benefits-content {
-        min-height: 260px;
-    }
+@media(max-width:1050px){.benefits-content{min-height:280px;}
 }
-@media(max-width:1050px){
-    .benefits-content {
-        min-height: 280px;
-    }
+@media(max-width:990px){.benefits-content{min-height:270px;}
 }
-@media(max-width:990px){
-    .benefits-content {
-        min-height: 270px;
-    }
+@media(max-width:767px){.benefits-content{min-height:auto;}
 }
-@media(max-width:767px){
-    .benefits-content {
-        min-height: auto;
-    }
+@media(max-width:629px){ul.my-picture-ul.level2 > li{float:none;margin:0 auto 30px;max-height:250px;overflow:hidden;padding:0;}
 }
-
-@media(max-width:629px){
-ul.my-picture-ul.level2 > li {float: none;margin: 0 auto 30px;max-height: 250px;overflow: hidden;padding: 0;}
-}
-
