--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -536,7 +536,7 @@ span#log{font-style:italic;color:#bbb;margin-left:5px;}
 .chat_video{position:relative;display:inline-block;vertical-align:middle;border:2px solid #f26f6f;}
 .chat_video:before{content:'';background:rgba(0,0,0,.4);width:100%;height:100%;position:absolute;top:0;left:0;display:block;  }
 .chat_video:after{content:'';width:0;height:0;border-top:15px solid transparent;border-bottom:15px solid transparent;border-left:25px solid #f26f6f;position:absolute;top:50%;left:50%;
--webkit-transform:translate(-50%, -50%);-moz-transform:translate(-50%, -50%);transform:translate(-50%, -50%);}
+                  -webkit-transform:translate(-50%, -50%);-moz-transform:translate(-50%, -50%);transform:translate(-50%, -50%);}
 
 .nav-tabs>li.active>a, 
 .nav-tabs>li.active>a:focus,
@@ -567,7 +567,7 @@ span#log{font-style:italic;color:#bbb;margin-left:5px;}
 .upload-anythings > .btn.btn-primary{background:#f26f6f;border:2px solid #f26f6f;color:#ffffff;font-family:"Poppins";font-size:14px;font-weight:700;letter-spacing: 0.04em; margin: 0 auto; padding:11px 0 7px; text-align: center; text-transform: uppercase; width: 90px;border-radius:0;}
 
 .message-user-pic h4 small{background:#ed7575 none repeat scroll 0 0;font-size:11px;height:18px;line-height:12px;min-width:20px;padding:3px 6px;vertical-align:middle;border-radius:60px;color:#fff;
-display:inline-block;vertical-align:middle;text-align:center;}
+                           display:inline-block;vertical-align:middle;text-align:center;}
 .chat_img img,.chat_video img{width:100px;height:auto;}
 .chat_img img{border:2px solid #f26f6f;}
 label.missed{font-weight:normal;display:inline;color:#f26f6f;cursor:text;}
@@ -605,7 +605,7 @@ label.missed{font-weight:normal;display:inline;color:#f26f6f;cursor:text;}
 #eflyer .modal-body img{max-width:100%;}
 #eflyer button{position:absolute;top:10px;right:10px;z-index:10;}
 #eflyer button.close{font-size:24px;font-weight:300;line-height:24px;background:#000;width:24px;height:24px;border-radius:80px;text-shadow:none;
-color:#fff;text-align:center;display:block;text-indent:1px;}
+                     color:#fff;text-align:center;display:block;text-indent:1px;}
 
 .video-swipe{margin:0 auto 20px;width:100%;display:block;}
 .video-swipe #tinderslide li,
@@ -613,3 +613,4 @@ color:#fff;text-align:center;display:block;text-indent:1px;}
 .video-swipe #tinderslide3 li{width:100%;position:relative;}
 .video-swipe .user-list-pic-wrapper{width:100%;}
 .video-swipe .jwplayer video{position:relative;}
+#ad-container, #ad-slot video {position:absolute;top:0;left:0;width:100%;height:100%;}
